# mcp-bigquery-v1

./: .env.example  .gitignore  AGENT_FIXES_SUMMARY.md  AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_QUALITY_FIXES_SUMMARY.md  AI_AGENT_QUALITY_INVESTIGATION.md  CHANGELOG_DB_FIXES.md  CHANGES_SUMMARY.md  CLIENT_IMPLEMENTATION_SUMMARY.md  COMMIT_MESSAGE.md  COMPREHENSIVE_FIX_SUMMARY.md  CONVERSATION_MANAGER_IMPLEMENTATION.md  DOTENV_FIX_SUMMARY.md  E2E_INTEGRATION_TESTING_IMPLEMENTATION.md  ENDPOINT_404_FIX.md  EXECUTIVE_SUMMARY_404_FIX.md  HTTP_ENDPOINTS_DOCUMENTATION.md  HTTP_STREAM_404_FIX_README.md  HTTP_STREAM_TRANSPORT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_404_HTTP_STREAM.md  INVESTIGATION_COMPLETE.md  INVESTIGATION_MISSING_ENDPOINTS.md  LLM_PROVIDER_IMPLEMENTATION.md  MAGIC_LINK_CODE_LOCATIONS.md  MAGIC_LINK_DEBUG_SUMMARY.md  MAGIC_LINK_FIX_SUMMARY.md  MAGIC_LINK_FLOW_DIAGRAM.md  MAGIC_LINK_IMPLEMENTATION_SUMMARY.md  MAGIC_LINK_INVESTIGATION_REPORT.md  MAGIC_LINK_README.md  PYDANTIC_IMPLEMENTATION.md  RBAC_IMPLEMENTATION.md  README.md  RLS_FIX_SUMMARY.md  SIGNUP_IMPLEMENTATION_SUMMARY.md  STREAMLIT_IMPLEMENTATION_SUMMARY.md  SUPABASE_AUTH_IMPLEMENTATION.md  TEST_RESULTS_SUMMARY.md  TICKET_INVESTIGATION_SUMMARY.md  (+7 more)
docs/: AGENT_ARCHITECTURE_INVESTIGATION.md  AGENT_REDESIGN_EXECUTIVE_SUMMARY.md  AGENT_REDESIGN_IMPLEMENTATION_GUIDE.md  AUTH.md  CHAT_PERSISTENCE.md  CONVERSATION_CONTEXT_FIXES.md  DATABASE_SETUP.md  FIX_DATABASE_ISSUES.md  MCP_CLIENT.md  STREAMLIT_QUICKSTART.md  agent_client.md  chat_llm_usage_examples.md  conversation_manager.md  fix_rls_policies.sql  llm_providers.md  streamlit.md  supabase_chat_schema.sql  (+2 more)
(+104 files in other folders)
